# alopekis

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: build_and_push_image.yml  deploy.yml  release.yml  update_terraform.yml
alopekis/: agzip.py  config.py  exceptions.py  opensearch.py  s3.py  serializer.py  utils.py  worker.py
