[tool.poetry]
name = "alopekis"
version = "0.1.0"
description = "DataCite Data Files Generator"
authors = ["Mike Bennett <mbennett@datacite.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opensearch-dsl = "^2.1.0"
ujson = "^5.11.0"
python-dotenv = "^1.1.1"
pyhumps = "^3.8.0"
boto3 = {extras = ["crt"], version = "^1.40.22"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=alopekis --cov-report=term-missing"
